# axum-sqlx-pg-template

./: Cargo.toml  books.http
.cargo/: config.toml
migrations/: 20240204140920_books.up.sql
src/: error.rs  main.rs  rest.rs  router.rs  state.rs
src/models/: books.rs
src/repository/: mod.rs  pg_repository.rs
src/rest/: books_handlers.rs  mod.rs
