[package]
name = "{{project-name}}"
version = "0.1.0"
authors = ["{{authors}}"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.77"
axum = "0.7.4"
chrono = { version = "0.4.33", features = ["serde"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_with = "3.6.0"
sqlx = { version = "0.7.3", features = [ "runtime-tokio", "postgres", "tls-native-tls", "chrono", "uuid" ]}
tokio = { version = "1.36.0", features = ["full"] }
tracing = { version = "0.1.40", features = ["attributes"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.7.0", features = ["serde"] }
[dev-dependencies]
axum-test-helper = "0.3.0"

